# niffler-py-st3

./: docker-compose.mock-grpc.yml  docker-compose.yml  index.html
.github/workflows/: test_pipline.yml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 10000fbbd67aedc9.json  1028bcd060d5b324.txt  1052bd526138b891.html  10bf60e40cd84918.html  110f5316221d6247.txt  (+970 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
niffler-e-2-e-tests-python/: .env.example  README.md  conftest.py  marks.py  pyproject.toml
niffler-e-2-e-tests-python/clients/: kafka_client.py  oauth_client.py  spends_client.py
niffler-e-2-e-tests-python/database/: spend_db.py  userdata_db.py
niffler-e-2-e-tests-python/fixtures/: auth_fixtures.py  client_fixtures.py  pages_fixtures.py
niffler-e-2-e-tests-python/internal/pb/: niffler_currency_pb2_pbreflect.py
niffler-e-2-e-tests-python/internal/pb/grpc/health/v1/: health_pb2.pyi  health_pb2_pbreflect.py
niffler-e-2-e-tests-python/internal/pb/grpc/interceptors/: allure.py  logging.py
niffler-e-2-e-tests-python/models/: category.py  config.py  enums.py  spend.py  user.py
niffler-e-2-e-tests-python/pages/: auth_page.py  base_page.py  profile_page.py  spending_page.py
niffler-e-2-e-tests-python/resources/templates/: read_templates.py
niffler-e-2-e-tests-python/resources/templates/xsd/: envelope.xsd
niffler-e-2-e-tests-python/settings/: settings.py
niffler-e-2-e-tests-python/tests/: test_auth.py  test_profile.py  test_spending.py
niffler-e-2-e-tests-python/tests/api_tests/: test_categories_api.py  test_spendings_api.py
niffler-e-2-e-tests-python/tests/grpc_tests/: test_calculate_rate.py  test_get_all_currencies.py
niffler-e-2-e-tests-python/tests/kafka_tests/: test_kafka.py
niffler-e-2-e-tests-python/tests/soap_tests/: test_soap.py
niffler-e-2-e-tests-python/tests/ui_tests/: test_profile.py  test_spending.py
niffler-e-2-e-tests-python/tools/: allure_helpers.py  assertions.py  fakers.py  sessions.py
widgets/: behaviors.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+210 files in other folders)
